Overflow fix

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -27,6 +27,7 @@ body {
   display: flex;
   min-width: 320px;
   height: 100%;
+  overflow: hidden;
   overflow-y: auto;
 }
 
